test_suite/tests/ui/inject_constructor/unknown_fields.stderr
error[E0432]: unresolved import `dilib`
 --> $DIR/unknown_fields.rs:1:5
  |
1 | use dilib::Injectable;
  |     ^^^^^ use of undeclared crate or module `dilib`

error: cannot determine resolution for the derive macro `Injectable`
 --> $DIR/unknown_fields.rs:3:10
  |
3 | #[derive(Injectable)]
  |          ^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `inject` in this scope
 --> $DIR/unknown_fields.rs:4:3
  |
4 | #[inject(constructor="new(x, y)")]
  |   ^^^^^^
